Added Link in Home Page

--- a/ProductReviewAungAndBryant/Client/Pages/Index.razor
+++ b/ProductReviewAungAndBryant/Client/Pages/Index.razor
@@ -57,55 +57,72 @@
 
 <div class="grid-container">
 
-    <a href = "/counter"></a>
+    <a href = "/counter">
         <div class="item">
             <div class="content">This is the CPU<br />Review</div>
             <img class="image" src="https://via.placeholder.com/258x190" alt="CPU Review">
         </div>
+    </a>
 
-    <div class="item">
-        <div class="content">This is the Air Cooler Review</div>
-        <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
-    </div>
+    <a href "/counter"
+        <div class="item">
+            <div class="content">This is the Air Cooler Review</div>
+            <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
+        </div>
+    </a>
 
-    <div class="item">
-        <div class="content">This is the Air Cooler Review</div>
-        <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
-    </div>
+    <a href="/counter">
+        <div class="item">
+            <div class="content">This is the Air Cooler Review</div>
+            <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
+        </div>
+    </a>
 
-    <div class="item">
-        <div class="content">This is the Air Cooler Review</div>
-        <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
-    </div>
+    <a href="/counter">
+        <div class="item">
+            <div class="content">This is the Air Cooler Review</div>
+            <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
+        </div>
+    </a>
 
-    <div class="item">
-        <div class="content">This is the Air Cooler Review</div>
-        <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
-    </div>
+    <a href="/counter">
+        <div class="item">
+            <div class="content">This is the Air Cooler Review</div>
+            <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
+        </div>
+    </a>
 
-    <div class="item">
-        <div class="content">This is the Air Cooler Review</div>
-        <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
-    </div>
+    <a href="/counter">
+        <div class="item">
+            <div class="content">This is the Air Cooler Review</div>
+            <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
+        </div>
+    </a>
 
-    <div class="item">
-        <div class="content">This is the Air Cooler Review</div>
-        <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
-    </div>
+    <a href="/counter">
+        <div class="item">
+            <div class="content">This is the Air Cooler Review</div>
+            <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
+        </div>
+    </a>
 
-    <div class="item">
-        <div class="content">This is the Air Cooler Review</div>
-        <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
-    </div>
+    <a href="/counter">
+        <div class="item">
+            <div class="content">This is the Air Cooler Review</div>
+            <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
+        </div>
+    </a>
 
-    <div class="item">
-        <div class="content">This is the Air Cooler Review</div>
-        <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
-    </div>
-
+    <a href="/counter">
+        <div class="item">
+            <div class="content">This is the Air Cooler Review</div>
+            <img class="image" src="https://via.placeholder.com/260x191" alt="Air Cooler Review">
+        </div>
+    </a>
 
 </div>
 
+@* Temporray layout for stles for homepage *@
 <style>
     
     .grid-container {
