I added database and default data

--- a/ProductReviewAungAndBryant/Client/Pages/Index.razor
+++ b/ProductReviewAungAndBryant/Client/Pages/Index.razor
@@ -1,6 +1,12 @@
 ﻿@page "/"
 
 <PageTitle>Product Review</PageTitle>
+@using Microsoft.AspNetCore.Authorization
+@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject NavigationManager NavigationManager
+
+<AuthorizeView>
+    <Authorized>
 
 @* <style>
     body {background-color: #7D7D7D;}
@@ -144,3 +150,10 @@
         word-wrap: break-word;
     }
 </style>
+    </Authorized>
+    <NotAuthorized>
+        @{
+            NavigationManager.NavigateTo("/authentication/login");
+        }
+    </NotAuthorized>
+</AuthorizeView>
