--- a/ProductReviewAungAndBryant/Client/Pages/Index.razor
+++ b/ProductReviewAungAndBryant/Client/Pages/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
 
 <PageTitle>Product Review</PageTitle>
-@using Microsoft.AspNetCore.Authorization
-@inject AuthenticationStateProvider AuthenticationStateProvider
+@* @using Microsoft.AspNetCore.Authorization *@
+@* @inject AuthenticationStateProvider AuthenticationStateProvider *@
 @inject NavigationManager NavigationManager
 
 
