--- a/ProductReviewAungAndBryant/Client/Shared/NavMenu.razor
+++ b/ProductReviewAungAndBryant/Client/Shared/NavMenu.razor
@@ -46,8 +46,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="categories">
+                <span class="oi oi-plus" aria-hidden="true"></span> Category
             </NavLink>
         </div>
         <div class="nav-item px-3">
