--- a/ProductReviewAungAndBryant/Client/App.razor
+++ b/ProductReviewAungAndBryant/Client/App.razor
@@ -18,7 +18,7 @@
         <NotFound>
             <PageTitle>Not found</PageTitle>
             <LayoutView Layout="@typeof(MainLayout)">
-                <p role="alert">Sorry, there's nothing at this address.</p>
+                <p role="alert">Not Found</p>
             </LayoutView>
         </NotFound>
     </Router>
