--- a/ProductReviewAungAndBryant/Client/Pages/Category/ViewCategory.razor
+++ b/ProductReviewAungAndBryant/Client/Pages/Category/ViewCategory.razor
@@ -1,43 +1,51 @@
-﻿@page "/categories/create"
+﻿@page "/categories/view/{id:int}"
 
 @using CategoryModel = ProductReviewAungAndBryant.Shared.Domain
 @using ProductReviewAungAndBryant.Client.Static
+
 @inject NavigationManager _navManager
 @inject HttpClient _client
 
-<h3>Add Category</h3>
-
-<EditForm Model="categoryModel">
-    <DataAnnotationsValidator />
-    <ValidationSummary />
+<h3>View Category </h3>
     <div class="form-group">
         <label>Category Name: </label>
         <div>
             <InputText @bind-Value="categoryModel.CategoryName" class="form-control" />
-            <ValidationMessage For="@(() => categoryModel.CategoryName)" />
         </div>
     </div>
     <div class="form-group mt-3">
         <label>Category Brand Name: </label>
         <div>
             <InputText @bind-Value="categoryModel.CategoryBrandName" class="form-control" />
-            <ValidationMessage For="@(() => categoryModel.CategoryBrandName)" />
         </div>
     </div>
 
-    <button type="submit" class="btn btn-success mt-3" @onclick="()=>Save()">
+    <button type="button" class="btn btn-success mt-3" @onclick="()=>Back()">
         @ButtonText
-    </button>/
-</EditForm>
+    </button>
 
 @code {
-    private CategoryModel.Category categoryModel = new CategoryModel.Category();
-    public string ButtonText { get; set; } = "Save Category";
+    [Parameter]
+    public int id { get; set; }
+    public string ButtonText { get; set; } = "Back";
 
-    async Task Save()
+    private CategoryModel.Category categoryModel = new CategoryModel.Category();
+
+    protected override async Task OnInitializedAsync()
     {
-        categoryModel.CreatedBy = "Admin";
-        await _client.PostAsJsonAsync($"{Endpoints.CategoriesEndpoint}/PostCategory", categoryModel);
+        try
+        {
+            categoryModel = await _client.GetFromJsonAsync<CategoryModel.Category>($"{Endpoints.CategoriesEndpoint}/GetCategory/{id}");
+        }
+        catch (AccessTokenNotAvailableException exception)
+        {
+            exception.Redirect();
+        }
+    }
+
+    async Task Back()
+    {
         _navManager.NavigateTo("/categories/");
     }
 }
+
