--- a/ProductReviewAungAndBryant/Client/Shared/NavMenu.razor
+++ b/ProductReviewAungAndBryant/Client/Shared/NavMenu.razor
@@ -51,6 +51,12 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pcparts">
+                <span class="oi  oi-wrench" aria-hidden="true"></span> Category
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
